Fix overflow-x to overflow to ensure all scroll bar are removed for user

--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@
 
 html, body {
     height: 100%;
+    overflow: hidden;
 }
 
 body {
@@ -26,5 +27,5 @@ body {
     align-items: center;
     justify-content: center;
     max-width: 100%;
-    overflow-x: hidden;
+    
 }
